@@ -309,7 +309,7 @@ require 'rubygems/gem_openssl'
 # * Might be better to store the certificate chain as a PKCS#7 or PKCS#12
 #   file, instead of an array embedded in the metadata.  ideas?
 # * Possibly embed signature and key algorithms into metadata (right now
-#   they're assumed to be the same as what's set inGem::Security::OPT)
+#   they're assumed to be the same as what's set in Gem::Security::OPT)
 #
 # == About the Author
 #
@@ -511,14 +511,14 @@ module Gem::Security
   #
   # No security policy: all package signature checks are disabled.
   #
-  NoSecurity = Policy.new({
+  NoSecurity = Policy.new(
     :verify_data      => false,
     :verify_signer    => false,
     :verify_chain     => false,
     :verify_root      => false,
     :only_trusted     => false,
-    :only_signed      => false,
-  })
+    :only_signed      => false
+  )
 
   #
   # AlmostNo security policy: only verify that the signing certificate is the
@@ -528,14 +528,14 @@ module Gem::Security
   # This policy is basically useless. better than nothing, but can still be
   # easily spoofed, and is not recommended.
   #
-  AlmostNoSecurity = Policy.new({
+  AlmostNoSecurity = Policy.new(
     :verify_data      => true,
     :verify_signer    => false,
     :verify_chain     => false,
     :verify_root      => false,
     :only_trusted     => false,
-    :only_signed      => false,
-  })
+    :only_signed      => false
+  )
 
   #
   # Low security policy: only verify that the signing certificate is actually
@@ -544,14 +544,14 @@ module Gem::Security
   # This policy is better than nothing, but can still be easily spoofed, and
   # is not recommended.
   #
-  LowSecurity = Policy.new({
+  LowSecurity = Policy.new(
     :verify_data      => true,
     :verify_signer    => true,
     :verify_chain     => false,
     :verify_root      => false,
     :only_trusted     => false,
-    :only_signed      => false,
-  })
+    :only_signed      => false
+  )
 
   #
   # Medium security policy: verify the signing certificate, verify the signing
@@ -562,14 +562,14 @@ module Gem::Security
   # malicious person could simply delete the package signature and pass the
   # gem off as unsigned.
   #
-  MediumSecurity = Policy.new({
+  MediumSecurity = Policy.new(
     :verify_data      => true,
     :verify_signer    => true,
     :verify_chain     => true,
     :verify_root      => true,
     :only_trusted     => true,
-    :only_signed      => false,
-  })
+    :only_signed      => false
+  )
 
   #
   # High security policy: only allow signed gems to be installed, verify the
@@ -580,14 +580,25 @@ module Gem::Security
   # This security policy is significantly more difficult to bypass, and offers
   # a reasonable guarantee that the contents of the gem have not been altered.
   #
-  HighSecurity = Policy.new({
+  HighSecurity = Policy.new(
     :verify_data      => true,
     :verify_signer    => true,
     :verify_chain     => true,
     :verify_root      => true,
     :only_trusted     => true,
-    :only_signed      => true,
-  })
+    :only_signed      => true
+  )
+
+  #
+  # Hash of configured security policies
+  #
+  Policies = {
+    'NoSecurity'       => NoSecurity,
+    'AlmostNoSecurity' => AlmostNoSecurity,
+    'LowSecurity'      => LowSecurity,
+    'MediumSecurity'   => MediumSecurity,
+    'HighSecurity'     => HighSecurity,
+  }
 
   #
   # Sign the cert cert with @signing_key and @signing_cert, using the digest
